# banknote

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  banknote.sln  banknote.vcxproj
banknote/: Currency.h  Wad.h
src/: Banknote.h  Nominals.h  Wad.h  stdafx.h
src/tests/: Defines.h  WadTest.cpp  test.cpp
tests/: BanknoteTest.cpp  CurrencyTest.cpp  NominalsTest.cpp  TestDefines.h  WadTest.cpp
